--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ body {
   text-transform: uppercase;
 }
 
-.icone-pequeno{
+.small-icon{
   background-image: url(../img/Jogodomilhao1999-2.png);
   display: block;
   margin-left: auto;
@@ -248,6 +248,7 @@ body {
     border-radius: 50%;
     margin-right: 3px;
     margin-top: 15px;
+    border-bottom: 1px solid #000000;
 }
 
 .quiz-box .answer-indicator div.correct{
